Assignment 5/ass5_20CS30005_20CS30035.output
Terminals unused in grammar

   STRUCT
   TYPEDEF
   UNION
   HASH


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | STRING_LITERAL
    4                   | PARENTHESIS_OPEN expression PARENTHESIS_CLOSE

    5 constant: INTEGER_CONSTANT
    6         | FLOATING_CONSTANT
    7         | CHAR_CONSTANT

    8 postfix_expression: primary_expression
    9                   | postfix_expression SQUARE_BRACE_OPEN expression SQUARE_BRACE_CLOSE
   10                   | postfix_expression PARENTHESIS_OPEN argument_expression_list_opt PARENTHESIS_CLOSE
   11                   | postfix_expression DOT IDENTIFIER
   12                   | postfix_expression ARROW IDENTIFIER
   13                   | postfix_expression INCREMENT
   14                   | postfix_expression DECREMENT
   15                   | PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE CURLY_BRACE_OPEN initializer_list CURLY_BRACE_CLOSE
   16                   | PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE CURLY_BRACE_OPEN initializer_list COMMA CURLY_BRACE_CLOSE

   17 argument_expression_list_opt: argument_expression_list
   18                             | %empty

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list COMMA assignment_expression

   21 unary_expression: postfix_expression
   22                 | INCREMENT unary_expression
   23                 | DECREMENT unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF unary_expression
   26                 | SIZEOF PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE

   27 unary_operator: BITWISE_AND
   28               | MULTIPLY
   29               | ADD
   30               | SUBTRACT
   31               | BITWISE_NOR
   32               | NOT

   33 cast_expression: unary_expression
   34                | PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression MULTIPLY cast_expression
   37                          | multiplicative_expression DIVIDE cast_expression
   38                          | multiplicative_expression MODULO cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression ADD multiplicative_expression
   41                    | additive_expression SUBTRACT multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LSHIFT additive_expression
   44                 | shift_expression RSHIFT additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression LESS_THAN shift_expression
   47                      | relational_expression GREATER_THAN shift_expression
   48                      | relational_expression LESS_THAN_EQUAL shift_expression
   49                      | relational_expression GREATER_THAN_EQUAL shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQUAL relational_expression
   52                    | equality_expression NOT_EQUAL relational_expression

   53 and_expression: equality_expression
   54               | and_expression BITWISE_AND equality_expression

   55 exclusive_or_expression: and_expression
   56                        | exclusive_or_expression BITWISE_XOR and_expression

   57 inclusive_or_expression: exclusive_or_expression
   58                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

   59 logical_and_expression: inclusive_or_expression
   60                       | logical_and_expression LOGICAL_AND M inclusive_or_expression

   61 logical_or_expression: logical_and_expression
   62                      | logical_or_expression LOGICAL_OR M logical_and_expression

   63 conditional_expression: logical_or_expression
   64                       | logical_or_expression N QUESTION_MARK M expression N COLON M conditional_expression

   65 M: %empty

   66 N: %empty

   67 assignment_expression: conditional_expression
   68                      | unary_expression assignment_operator assignment_expression

   69 assignment_operator: ASSIGN
   70                    | MULTIPLY_ASSIGN
   71                    | DIVIDE_ASSIGN
   72                    | MODULO_ASSIGN
   73                    | ADD_ASSIGN
   74                    | SUBTRACT_ASSIGN
   75                    | LSHIFT_ASSIGN
   76                    | RSHIFT_ASSIGN
   77                    | AND_ASSIGN
   78                    | XOR_ASSIGN
   79                    | OR_ASSIGN

   80 expression: assignment_expression
   81           | expression COMMA assignment_expression

   82 constant_expression: conditional_expression

   83 declaration: declaration_specifiers init_declarator_list SEMICOLON
   84            | declaration_specifiers SEMICOLON

   85 declaration_specifiers: storage_class_specifier declaration_specifiers
   86                       | storage_class_specifier
   87                       | type_specifier declaration_specifiers
   88                       | type_specifier
   89                       | type_qualifier declaration_specifiers
   90                       | type_qualifier
   91                       | function_specifier declaration_specifiers
   92                       | function_specifier

   93 init_declarator_list: init_declarator
   94                     | init_declarator_list COMMA init_declarator

   95 init_declarator: declarator
   96                | declarator ASSIGN initializer

   97 storage_class_specifier: EXTERN
   98                        | STATIC
   99                        | AUTO
  100                        | REGISTER

  101 type_specifier: VOID
  102               | CHAR
  103               | SHORT
  104               | INT
  105               | LONG
  106               | FLOAT
  107               | DOUBLE
  108               | SIGNED
  109               | UNSIGNED
  110               | BOOL
  111               | COMPLEX
  112               | IMAGINARY
  113               | enum_specifier

  114 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  115                         | type_qualifier specifier_qualifier_list_opt

  116 specifier_qualifier_list_opt: specifier_qualifier_list
  117                             | %empty

  118 enum_specifier: ENUM identifier_opt CURLY_BRACE_OPEN enumerator_list CURLY_BRACE_CLOSE
  119               | ENUM identifier_opt CURLY_BRACE_OPEN enumerator_list COMMA CURLY_BRACE_CLOSE
  120               | ENUM IDENTIFIER

  121 identifier_opt: IDENTIFIER
  122               | %empty

  123 enumerator_list: enumerator
  124                | enumerator_list COMMA enumerator

  125 enumerator: IDENTIFIER
  126           | IDENTIFIER ASSIGN constant_expression

  127 type_qualifier: CONST
  128               | RESTRICT
  129               | VOLATILE

  130 function_specifier: INLINE

  131 declarator: pointer direct_declarator
  132           | direct_declarator

  133 direct_declarator: IDENTIFIER
  134                  | PARENTHESIS_OPEN declarator PARENTHESIS_CLOSE
  135                  | direct_declarator SQUARE_BRACE_OPEN type_qualifier_list assignment_expression SQUARE_BRACE_CLOSE
  136                  | direct_declarator SQUARE_BRACE_OPEN type_qualifier_list SQUARE_BRACE_CLOSE
  137                  | direct_declarator SQUARE_BRACE_OPEN assignment_expression SQUARE_BRACE_CLOSE
  138                  | direct_declarator SQUARE_BRACE_OPEN SQUARE_BRACE_CLOSE
  139                  | direct_declarator SQUARE_BRACE_OPEN STATIC type_qualifier_list assignment_expression SQUARE_BRACE_CLOSE
  140                  | direct_declarator SQUARE_BRACE_OPEN STATIC assignment_expression SQUARE_BRACE_CLOSE
  141                  | direct_declarator SQUARE_BRACE_OPEN type_qualifier_list STATIC assignment_expression SQUARE_BRACE_CLOSE
  142                  | direct_declarator SQUARE_BRACE_OPEN type_qualifier_list MULTIPLY SQUARE_BRACE_CLOSE
  143                  | direct_declarator SQUARE_BRACE_OPEN MULTIPLY SQUARE_BRACE_CLOSE
  144                  | direct_declarator PARENTHESIS_OPEN change_table parameter_type_list PARENTHESIS_CLOSE
  145                  | direct_declarator PARENTHESIS_OPEN identifier_list PARENTHESIS_CLOSE
  146                  | direct_declarator PARENTHESIS_OPEN change_table PARENTHESIS_CLOSE

  147 type_qualifier_list_opt: type_qualifier_list
  148                        | %empty

  149 pointer: MULTIPLY type_qualifier_list_opt
  150        | MULTIPLY type_qualifier_list_opt pointer

  151 type_qualifier_list: type_qualifier
  152                    | type_qualifier_list type_qualifier

  153 parameter_type_list: parameter_list
  154                    | parameter_list COMMA ELLIPSIS

  155 parameter_list: parameter_declaration
  156               | parameter_list COMMA parameter_declaration

  157 parameter_declaration: declaration_specifiers declarator
  158                      | declaration_specifiers

  159 identifier_list: IDENTIFIER
  160                | identifier_list COMMA IDENTIFIER

  161 type_name: specifier_qualifier_list

  162 initializer: assignment_expression
  163            | CURLY_BRACE_OPEN initializer_list CURLY_BRACE_CLOSE
  164            | CURLY_BRACE_OPEN initializer_list COMMA CURLY_BRACE_CLOSE

  165 initializer_list: designation_opt initializer
  166                 | initializer_list COMMA designation_opt initializer

  167 designation_opt: designation
  168                | %empty

  169 designation: designator_list ASSIGN

  170 designator_list: designator
  171                | designator_list designator

  172 designator: SQUARE_BRACE_OPEN constant_expression SQUARE_BRACE_CLOSE
  173           | DOT IDENTIFIER

  174 statement: labeled_statement
  175          | compound_statement
  176          | expression_statement
  177          | selection_statement
  178          | iteration_statement
  179          | jump_statement

  180 loop_statement: labeled_statement
  181               | expression_statement
  182               | selection_statement
  183               | iteration_statement
  184               | jump_statement

  185 labeled_statement: IDENTIFIER COLON statement
  186                  | CASE constant_expression COLON statement
  187                  | DEFAULT COLON statement

  188 compound_statement: CURLY_BRACE_OPEN X change_table block_item_list_opt CURLY_BRACE_CLOSE

  189 block_item_list_opt: block_item_list
  190                    | %empty

  191 block_item_list: block_item
  192                | block_item_list M block_item

  193 block_item: declaration
  194           | statement

  195 expression_statement: expression SEMICOLON
  196                     | SEMICOLON

  197 selection_statement: IF PARENTHESIS_OPEN expression N PARENTHESIS_CLOSE M statement N
  198                    | IF PARENTHESIS_OPEN expression N PARENTHESIS_CLOSE M statement N ELSE M statement
  199                    | SWITCH PARENTHESIS_OPEN expression PARENTHESIS_CLOSE statement

  200 iteration_statement: WHILE W PARENTHESIS_OPEN X change_table M expression PARENTHESIS_CLOSE M loop_statement
  201                    | WHILE W PARENTHESIS_OPEN X change_table M expression PARENTHESIS_CLOSE CURLY_BRACE_OPEN M block_item_list_opt CURLY_BRACE_CLOSE
  202                    | DO D M loop_statement M WHILE PARENTHESIS_OPEN expression PARENTHESIS_CLOSE SEMICOLON
  203                    | DO D CURLY_BRACE_OPEN M block_item_list_opt CURLY_BRACE_CLOSE M WHILE PARENTHESIS_OPEN expression PARENTHESIS_CLOSE SEMICOLON
  204                    | FOR F PARENTHESIS_OPEN X change_table declaration M expression_statement M expression N PARENTHESIS_CLOSE M loop_statement
  205                    | FOR F PARENTHESIS_OPEN X change_table expression_statement M expression_statement M expression N PARENTHESIS_CLOSE M loop_statement
  206                    | FOR F PARENTHESIS_OPEN X change_table declaration M expression_statement M expression N PARENTHESIS_CLOSE M CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE
  207                    | FOR F PARENTHESIS_OPEN X change_table expression_statement M expression_statement M expression N PARENTHESIS_CLOSE M CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE

  208 F: %empty

  209 W: %empty

  210 D: %empty

  211 X: %empty

  212 change_table: %empty

  213 jump_statement: GOTO IDENTIFIER SEMICOLON
  214               | CONTINUE SEMICOLON
  215               | BREAK SEMICOLON
  216               | RETURN expression SEMICOLON
  217               | RETURN SEMICOLON

  218 translation_unit: external_declaration
  219                 | translation_unit external_declaration

  220 external_declaration: function_definition
  221                     | declaration

  222 function_definition: declaration_specifiers declarator declaration_list_opt change_table CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE

  223 declaration_list_opt: declaration_list
  224                     | %empty

  225 declaration_list: declaration
  226                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO (258) 99
BREAK (259) 215
CASE (260) 186
CHAR (261) 102
CONST (262) 127
CONTINUE (263) 214
DEFAULT (264) 187
DO (265) 202 203
DOUBLE (266) 107
ELSE (267) 198
ENUM (268) 118 119 120
EXTERN (269) 97
FLOAT (270) 106
FOR (271) 204 205 206 207
GOTO (272) 213
IF (273) 197 198
INLINE (274) 130
INT (275) 104
LONG (276) 105
REGISTER (277) 100
RESTRICT (278) 128
RETURN (279) 216 217
SHORT (280) 103
SIGNED (281) 108
SIZEOF (282) 25 26
STATIC (283) 98 139 140 141
STRUCT (284)
SWITCH (285) 199
TYPEDEF (286)
UNION (287)
UNSIGNED (288) 109
VOID (289) 101
VOLATILE (290) 129
WHILE (291) 200 201 202 203
BOOL (292) 110
COMPLEX (293) 111
IMAGINARY (294) 112
SQUARE_BRACE_OPEN (295) 9 135 136 137 138 139 140 141 142 143 172
SQUARE_BRACE_CLOSE (296) 9 135 136 137 138 139 140 141 142 143 172
PARENTHESIS_OPEN (297) 4 10 15 16 26 34 134 144 145 146 197 198 199
    200 201 202 203 204 205 206 207
PARENTHESIS_CLOSE (298) 4 10 15 16 26 34 134 144 145 146 197 198 199
    200 201 202 203 204 205 206 207
CURLY_BRACE_OPEN (299) 15 16 118 119 163 164 188 201 203 206 207 222
CURLY_BRACE_CLOSE (300) 15 16 118 119 163 164 188 201 203 206 207 222
DOT (301) 11 173
ARROW (302) 12
INCREMENT (303) 13 22
DECREMENT (304) 14 23
BITWISE_AND (305) 27 54
MULTIPLY (306) 28 36 142 143 149 150
ADD (307) 29 40
SUBTRACT (308) 30 41
BITWISE_NOR (309) 31
NOT (310) 32
DIVIDE (311) 37
MODULO (312) 38
LSHIFT (313) 43
RSHIFT (314) 44
LESS_THAN (315) 46
GREATER_THAN (316) 47
LESS_THAN_EQUAL (317) 48
GREATER_THAN_EQUAL (318) 49
EQUAL (319) 51
NOT_EQUAL (320) 52
BITWISE_XOR (321) 56
BITWISE_OR (322) 58
LOGICAL_AND (323) 60
LOGICAL_OR (324) 62
QUESTION_MARK (325) 64
COLON (326) 64 185 186 187
SEMICOLON (327) 83 84 195 196 202 203 213 214 215 216 217
ELLIPSIS (328) 154
ASSIGN (329) 69 96 126 169
MULTIPLY_ASSIGN (330) 70
DIVIDE_ASSIGN (331) 71
MODULO_ASSIGN (332) 72
ADD_ASSIGN (333) 73
SUBTRACT_ASSIGN (334) 74
LSHIFT_ASSIGN (335) 75
RSHIFT_ASSIGN (336) 76
AND_ASSIGN (337) 77
XOR_ASSIGN (338) 78
OR_ASSIGN (339) 79
COMMA (340) 16 20 81 94 119 124 154 156 160 164 166
HASH (341)
IDENTIFIER (342) 1 11 12 120 121 125 126 133 159 160 173 185 213
INTEGER_CONSTANT (343) 5
FLOATING_CONSTANT (344) 6
CHAR_CONSTANT (345) 7
STRING_LITERAL (346) 3
THEN (347)


Nonterminals, with rules where they appear

$accept (93)
    on left: 0
primary_expression (94)
    on left: 1 2 3 4, on right: 8
constant (95)
    on left: 5 6 7, on right: 2
postfix_expression (96)
    on left: 8 9 10 11 12 13 14 15 16, on right: 9 10 11 12 13 14 21
argument_expression_list_opt (97)
    on left: 17 18, on right: 10
argument_expression_list (98)
    on left: 19 20, on right: 17 20
unary_expression (99)
    on left: 21 22 23 24 25 26, on right: 22 23 25 33 68
unary_operator (100)
    on left: 27 28 29 30 31 32, on right: 24
cast_expression (101)
    on left: 33 34, on right: 24 34 35 36 37 38
multiplicative_expression (102)
    on left: 35 36 37 38, on right: 36 37 38 39 40 41
additive_expression (103)
    on left: 39 40 41, on right: 40 41 42 43 44
shift_expression (104)
    on left: 42 43 44, on right: 43 44 45 46 47 48 49
relational_expression (105)
    on left: 45 46 47 48 49, on right: 46 47 48 49 50 51 52
equality_expression (106)
    on left: 50 51 52, on right: 51 52 53 54
and_expression (107)
    on left: 53 54, on right: 54 55 56
exclusive_or_expression (108)
    on left: 55 56, on right: 56 57 58
inclusive_or_expression (109)
    on left: 57 58, on right: 58 59 60
logical_and_expression (110)
    on left: 59 60, on right: 60 61 62
logical_or_expression (111)
    on left: 61 62, on right: 62 63 64
conditional_expression (112)
    on left: 63 64, on right: 64 67 82
M (113)
    on left: 65, on right: 60 62 64 192 197 198 200 201 202 203 204
    205 206 207
N (114)
    on left: 66, on right: 64 197 198 204 205 206 207
assignment_expression (115)
    on left: 67 68, on right: 19 20 68 80 81 135 137 139 140 141 162
assignment_operator (116)
    on left: 69 70 71 72 73 74 75 76 77 78 79, on right: 68
expression (117)
    on left: 80 81, on right: 4 9 64 81 195 197 198 199 200 201 202
    203 204 205 206 207 216
constant_expression (118)
    on left: 82, on right: 126 172 186
declaration (119)
    on left: 83 84, on right: 193 204 206 221 225 226
declaration_specifiers (120)
    on left: 85 86 87 88 89 90 91 92, on right: 83 84 85 87 89 91 157
    158 222
init_declarator_list (121)
    on left: 93 94, on right: 83 94
init_declarator (122)
    on left: 95 96, on right: 93 94
storage_class_specifier (123)
    on left: 97 98 99 100, on right: 85 86
type_specifier (124)
    on left: 101 102 103 104 105 106 107 108 109 110 111 112 113, on right:
    87 88 114
specifier_qualifier_list (125)
    on left: 114 115, on right: 116 161
specifier_qualifier_list_opt (126)
    on left: 116 117, on right: 114 115
enum_specifier (127)
    on left: 118 119 120, on right: 113
identifier_opt (128)
    on left: 121 122, on right: 118 119
enumerator_list (129)
    on left: 123 124, on right: 118 119 124
enumerator (130)
    on left: 125 126, on right: 123 124
type_qualifier (131)
    on left: 127 128 129, on right: 89 90 115 151 152
function_specifier (132)
    on left: 130, on right: 91 92
declarator (133)
    on left: 131 132, on right: 95 96 134 157 222
direct_declarator (134)
    on left: 133 134 135 136 137 138 139 140 141 142 143 144 145 146,
    on right: 131 132 135 136 137 138 139 140 141 142 143 144 145 146
type_qualifier_list_opt (135)
    on left: 147 148, on right: 149 150
pointer (136)
    on left: 149 150, on right: 131 150
type_qualifier_list (137)
    on left: 151 152, on right: 135 136 139 141 142 147 152
parameter_type_list (138)
    on left: 153 154, on right: 144
parameter_list (139)
    on left: 155 156, on right: 153 154 156
parameter_declaration (140)
    on left: 157 158, on right: 155 156
identifier_list (141)
    on left: 159 160, on right: 145 160
type_name (142)
    on left: 161, on right: 15 16 26 34
initializer (143)
    on left: 162 163 164, on right: 96 165 166
initializer_list (144)
    on left: 165 166, on right: 15 16 163 164 166
designation_opt (145)
    on left: 167 168, on right: 165 166
designation (146)
    on left: 169, on right: 167
designator_list (147)
    on left: 170 171, on right: 169 171
designator (148)
    on left: 172 173, on right: 170 171
statement (149)
    on left: 174 175 176 177 178 179, on right: 185 186 187 194 197
    198 199
loop_statement (150)
    on left: 180 181 182 183 184, on right: 200 202 204 205
labeled_statement (151)
    on left: 185 186 187, on right: 174 180
compound_statement (152)
    on left: 188, on right: 175
block_item_list_opt (153)
    on left: 189 190, on right: 188 201 203 206 207 222
block_item_list (154)
    on left: 191 192, on right: 189 192
block_item (155)
    on left: 193 194, on right: 191 192
expression_statement (156)
    on left: 195 196, on right: 176 181 204 205 206 207
selection_statement (157)
    on left: 197 198 199, on right: 177 182
iteration_statement (158)
    on left: 200 201 202 203 204 205 206 207, on right: 178 183
F (159)
    on left: 208, on right: 204 205 206 207
W (160)
    on left: 209, on right: 200 201
D (161)
    on left: 210, on right: 202 203
X (162)
    on left: 211, on right: 188 200 201 204 205 206 207
change_table (163)
    on left: 212, on right: 144 146 188 200 201 204 205 206 207 222
jump_statement (164)
    on left: 213 214 215 216 217, on right: 179 184
translation_unit (165)
    on left: 218 219, on right: 0 219
external_declaration (166)
    on left: 220 221, on right: 218 219
function_definition (167)
    on left: 222, on right: 220
declaration_list_opt (168)
    on left: 223 224, on right: 222
declaration_list (169)
    on left: 225 226, on right: 223 226


State 0

    0 $accept: . translation_unit $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   99 storage_class_specifier: AUTO .

    $default  reduce using rule 99 (storage_class_specifier)


State 2

  102 type_specifier: CHAR .

    $default  reduce using rule 102 (type_specifier)


State 3

  127 type_qualifier: CONST .

    $default  reduce using rule 127 (type_qualifier)


State 4

  107 type_specifier: DOUBLE .

    $default  reduce using rule 107 (type_specifier)


State 5

  118 enum_specifier: ENUM . identifier_opt CURLY_BRACE_OPEN enumerator_list CURLY_BRACE_CLOSE
  119               | ENUM . identifier_opt CURLY_BRACE_OPEN enumerator_list COMMA CURLY_BRACE_CLOSE
  120               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 122 (identifier_opt)

    identifier_opt  go to state 33


State 6

   97 storage_class_specifier: EXTERN .

    $default  reduce using rule 97 (storage_class_specifier)


State 7

  106 type_specifier: FLOAT .

    $default  reduce using rule 106 (type_specifier)


State 8

  130 function_specifier: INLINE .

    $default  reduce using rule 130 (function_specifier)


State 9

  104 type_specifier: INT .

    $default  reduce using rule 104 (type_specifier)


State 10

  105 type_specifier: LONG .

    $default  reduce using rule 105 (type_specifier)


State 11

  100 storage_class_specifier: REGISTER .

    $default  reduce using rule 100 (storage_class_specifier)


State 12

  128 type_qualifier: RESTRICT .

    $default  reduce using rule 128 (type_qualifier)


State 13

  103 type_specifier: SHORT .

    $default  reduce using rule 103 (type_specifier)


State 14

  108 type_specifier: SIGNED .

    $default  reduce using rule 108 (type_specifier)


State 15

   98 storage_class_specifier: STATIC .

    $default  reduce using rule 98 (storage_class_specifier)


State 16

  109 type_specifier: UNSIGNED .

    $default  reduce using rule 109 (type_specifier)


State 17

  101 type_specifier: VOID .

    $default  reduce using rule 101 (type_specifier)


State 18

  129 type_qualifier: VOLATILE .

    $default  reduce using rule 129 (type_qualifier)


State 19

  110 type_specifier: BOOL .

    $default  reduce using rule 110 (type_specifier)


State 20

  111 type_specifier: COMPLEX .

    $default  reduce using rule 111 (type_specifier)


State 21

  112 type_specifier: IMAGINARY .

    $default  reduce using rule 112 (type_specifier)


State 22

  221 external_declaration: declaration .

    $default  reduce using rule 221 (external_declaration)


State 23

   83 declaration: declaration_specifiers . init_declarator_list SEMICOLON
   84            | declaration_specifiers . SEMICOLON
  222 function_definition: declaration_specifiers . declarator declaration_list_opt change_table CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE

    PARENTHESIS_OPEN  shift, and go to state 34
    MULTIPLY          shift, and go to state 35
    SEMICOLON         shift, and go to state 36
    IDENTIFIER        shift, and go to state 37

    init_declarator_list  go to state 38
    init_declarator       go to state 39
    declarator            go to state 40
    direct_declarator     go to state 41
    pointer               go to state 42


State 24

   85 declaration_specifiers: storage_class_specifier . declaration_specifiers
   86                       | storage_class_specifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 86 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   87 declaration_specifiers: type_specifier . declaration_specifiers
   88                       | type_specifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  113 type_specifier: enum_specifier .

    $default  reduce using rule 113 (type_specifier)


State 27

   89 declaration_specifiers: type_qualifier . declaration_specifiers
   90                       | type_qualifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   91 declaration_specifiers: function_specifier . declaration_specifiers
   92                       | function_specifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 92 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit . $end
  219 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 47
    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 48
    function_definition      go to state 31


State 30

  218 translation_unit: external_declaration .

    $default  reduce using rule 218 (translation_unit)


State 31

  220 external_declaration: function_definition .

    $default  reduce using rule 220 (external_declaration)


State 32

  120 enum_specifier: ENUM IDENTIFIER .
  121 identifier_opt: IDENTIFIER .

    CURLY_BRACE_OPEN  reduce using rule 121 (identifier_opt)
    $default          reduce using rule 120 (enum_specifier)


State 33

  118 enum_specifier: ENUM identifier_opt . CURLY_BRACE_OPEN enumerator_list CURLY_BRACE_CLOSE
  119               | ENUM identifier_opt . CURLY_BRACE_OPEN enumerator_list COMMA CURLY_BRACE_CLOSE

    CURLY_BRACE_OPEN  shift, and go to state 49


State 34

  134 direct_declarator: PARENTHESIS_OPEN . declarator PARENTHESIS_CLOSE

    PARENTHESIS_OPEN  shift, and go to state 34
    MULTIPLY          shift, and go to state 35
    IDENTIFIER        shift, and go to state 37

    declarator         go to state 50
    direct_declarator  go to state 41
    pointer            go to state 42


State 35

  149 pointer: MULTIPLY . type_qualifier_list_opt
  150        | MULTIPLY . type_qualifier_list_opt pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 148 (type_qualifier_list_opt)

    type_qualifier           go to state 51
    type_qualifier_list_opt  go to state 52
    type_qualifier_list      go to state 53


State 36

   84 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 84 (declaration)


State 37

  133 direct_declarator: IDENTIFIER .

    $default  reduce using rule 133 (direct_declarator)


State 38

   83 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   94 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 54
    COMMA      shift, and go to state 55


State 39

   93 init_declarator_list: init_declarator .

    $default  reduce using rule 93 (init_declarator_list)


State 40

   95 init_declarator: declarator .
   96                | declarator . ASSIGN initializer
  222 function_definition: declaration_specifiers declarator . declaration_list_opt change_table CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE
